# creditscope

./: .env.example  .gitignore  Dockerfile.backend  Dockerfile.inference  README.md  docker-compose.yml  prometheus.yml  pyproject.toml
.claude/: settings.json
backend/: auth.py  main.py
backend/agent/: image_handler.py  orchestrator.py  prompts.py  tool_registry.py
backend/db/: models.py  queries.py  seed.py
backend/routers/: auth.py  chat.py  customers.py  history.py  observability.py  thinking.py
backend/schemas/: credit.py  customer.py  loan.py  observability.py  thinking.py
backend/tools/: collateral_eval.py  credit_score.py  debt_to_income.py  loan_structure.py  payment_history.py  risk_adjustment.py
circuit_tracer/: __init__.py  api.py  metrics.py
circuit_tracer/attribution/: __init__.py  graph.py  pruning.py  replacement_model.py
circuit_tracer/collectors/: __init__.py  activation_collector.py  architecture_map.py  model_loader.py
circuit_tracer/config/: __init__.py  model_config.py
circuit_tracer/interventions/: __init__.py  steering.py
circuit_tracer/saes/: __init__.py  sparse_autoencoder.py  trainer.py
circuit_tracer/transcoders/: __init__.py  cross_layer_transcoder.py  moe_transcoder.py
circuit_tracer/visualization/: __init__.py  export.py
deploy/nginx/: creditscope.conf
frontend/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/docker-entrypoint.d/: 40-basic-auth.sh
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: AppErrorBoundary.tsx  ChatInterface.tsx  CircuitTracerDashboard.tsx  CreditScoreGauge.tsx  CustomerCard.tsx  ImageUpload.tsx  LayerActivityView.tsx  LoginScreen.tsx  MessageBubble.tsx  MoEExpertPanel.tsx  ObservabilityDash.tsx  ThinkingBudgetSlider.tsx  ThinkingPanel.tsx  ToolExecutionPanel.tsx
frontend/src/hooks/: useChat.ts  useObservability.ts
frontend/src/services/: historyApi.ts
frontend/src/types/: index.ts
grafana/dashboards/: circuit-tracing.json  moe-observability.json  moe_expert_routing.json
grafana/provisioning/dashboards/: dashboards.yml
inference/: config.py  cot_controller.py  moe_hooks.py  observability.py  server.py  thinking_interceptor.py
scripts/: run_dev.sh  seed_db.py  setup.sh  setup_nginx_http.sh  start-dev.sh  watchdog.sh
